[gd_scene load_steps=5 format=2]

[ext_resource path="res://UnderGroundWorld/TreasureCaveFront.png" type="Texture" id=1]
[ext_resource path="res://UnderGroundWorld/TreasureCaveFrontVisible.png" type="Texture" id=2]
[ext_resource path="res://UnderGroundWorld/TreasureCave.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 125.015, 68 )

[node name="Node2D" type="Node2D"]

[node name="TreasureCaveFrontVisible" type="Sprite" parent="."]
position = Vector2( 495.5, 103.489 )
texture = ExtResource( 2 )

[node name="TreasureCaveFrontClear" type="Sprite" parent="."]
position = Vector2( 495.507, 103.436 )
z_index = 1
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 512.421, 99.7567 )
shape = SubResource( 1 )

[connection signal="body_entered" from="Area2D" to="Area2D" method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="Area2D" method="_on_Area2D_body_exited"]
